# exercism

java/binary-search-tree/.exercism/: metadata.json
java/hangman/.exercism/: metadata.json
java/matrix/: .project
java/matrix/.exercism/: metadata.json
java/micro-blog/.exercism/: metadata.json
java/minesweeper/.exercism/: metadata.json
java/ocr-numbers/: .project
java/ocr-numbers/.exercism/: metadata.json
java/pythagorean-triplet/: .project
java/rectangles/: .project
python/: pyproject.toml
python/binary-search-tree/: binary_search_tree.py
python/binary-search-tree/.exercism/: metadata.json
python/ghost-gobble-arcade-game/.exercism/: metadata.json
python/guidos-gorgeous-lasagna/: lasagna.py
python/guidos-gorgeous-lasagna/.exercism/: metadata.json
python/hello-world/.exercism/: metadata.json
python/leap/.exercism/: metadata.json
python/plane-tickets/: generators.py
python/plane-tickets/.exercism/: metadata.json
python/prime-factors/: prime_factors.py
python/prime-factors/.exercism/: metadata.json
python/rest-api/: rest_api.py
python/rest-api/.exercism/: metadata.json
python/triangle/.exercism/: metadata.json
typescript/hello-world/: hello-world.js  package.json
typescript/linked-list/: linked-list.ts  package.json  pnpm-lock.yaml
typescript/resistor-color/: .pnp.cjs  package.json  pnpm-lock.yaml  resistor-color.ts
typescript/resistor-color-duo/: package.json  resistor-color-duo.ts
typescript/resistor-color-trio/: package.json  resistor-color-trio.ts
typescript/two-fer/: package.json  pnpm-lock.yaml  two-fer.ts
(+22 files in other folders)
