[tool.poetry]
name = "exercism-python"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.1"
pytest-cache = "^1.0"
pytest-subtests = "^0.12.1"
pytest-pylint = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
